This is my HTML about me document

--- a/index.html(update).html
+++ b/index.html(update).html
@@ -44,7 +44,7 @@
     
     <a href="https://www.tiktok.com">Click Me</a>
     
-    <a href="https://www.google.com">This is a a link</a></main>
+    <a href="https://www.google.com">This is a a link</a></main
 
 <footer>This is my footer</footer>
 </body>
